-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
OSX 10.8
-
-
200cc1f1e9aded9fb891e9af0699887c04a465a2 b8c96f2eb9f0cb1a5ffa8bfd3ab89f53f8e8badd 04e8c5d5e886800fba764574efd2620bb5c6d789
When using OSX VoiceOver with text content in QPlainTextEdit or QTextEdit the text isn't spoken out loud. The behaviour is different from native OSX applications e.g Safari and TextEdit.
For Gerrit Dashboard: QTBUG-37204 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
81131,2 | Accessibility Mac: Fix TextEdit | stable | qt/qtbase | Status: MERGED | +2 | 0 |